[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Sprites/TileSet.tres" type="TileSet" id=1]
[ext_resource path="res://Scenes/Payer/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Tileset/PassThroughTileSet.tres" type="TileSet" id=3]
[ext_resource path="res://Assets/background/set2_background.png" type="Texture" id=4]
[ext_resource path="res://Assets/background/set2_tiles.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Coin/Coin.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Level1/Level1.gd" type="Script" id=7]
[ext_resource path="res://Assets/background/Flou.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 256, 32 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 1543.5, 66.5 )

[node name="Level1" type="Node2D"]
script = ExtResource( 7 )

[node name="TileOneWay" type="TileMap" parent="."]
position = Vector2( 1403, 699 )
tile_set = ExtResource( 3 )
collision_layer = 2
collision_mask = 49
format = 1
tile_data = PoolIntArray( -327671, 1, 0, -327670, 2, 0, -327669, 2, 0, -327668, 2, 0, -327667, 2, 0, -327666, 2, 0, -327665, 2, 0, -327664, 3, 0, -262135, 0, 0, -262134, 0, 0, -262133, 0, 0, -262132, 0, 0, -262131, 0, 0, -262130, 0, 0, -262129, 0, 0, -262128, 0, 0, -196599, 0, 0, -196598, 0, 0, -196597, 0, 0, -196596, 0, 0, -196595, 0, 0, -196594, 0, 0, -196593, 0, 0, -196592, 0, 0 )

[node name="StaticBody2D" type="StaticBody2D" parent="TileOneWay"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileOneWay/StaticBody2D"]
position = Vector2( 837, -283 )
shape = SubResource( 1 )
one_way_collision = true

[node name="TileSolid" type="TileMap" parent="."]
position = Vector2( 1391, 697 )
tile_set = ExtResource( 1 )
collision_layer = 2
collision_mask = 49
format = 1
tile_data = PoolIntArray( -655380, 0, 0, -720878, 0, 0, -589844, 0, 0, -655342, 0, 0, -524308, 0, 0, -589806, 0, 0, -458772, 0, 0, -524270, 0, 0, -393236, 0, 0, -458734, 0, 0, -327700, 0, 0, -327699, 0, 0, -327698, 0, 0, -327697, 0, 0, -327696, 6, 0, -393198, 0, 0, -262164, 0, 0, -262163, 0, 0, -262162, 0, 0, -262161, 0, 0, -262160, 0, 0, -262159, 6, 0, -327680, 9, 0, -327679, 2, 0, -327678, 2, 0, -327677, 2, 0, -327676, 10, 0, -327662, 0, 0, -196628, 0, 0, -196627, 0, 0, -196626, 0, 0, -196625, 0, 0, -196624, 0, 0, -196623, 0, 0, -196622, 6, 0, -262126, 0, 0, -131092, 0, 0, -131091, 0, 0, -131090, 0, 0, -131089, 0, 0, -131088, 0, 0, -131087, 0, 0, -131086, 0, 0, -131085, 6, 0, -196590, 0, 0, -65556, 0, 0, -65555, 0, 0, -65554, 0, 0, -65553, 0, 0, -65552, 0, 0, -65551, 0, 0, -65550, 0, 0, -65549, 0, 0, -65548, 0, 0, -65547, 0, 0, -65546, 0, 0, -65545, 0, 0, -65544, 0, 0, -65543, 0, 0, -65542, 0, 0, -65541, 0, 0, -65540, 0, 0, -65539, 0, 0, -65538, 0, 0, -65537, 0, 0, -131072, 0, 0, -131071, 0, 0, -131070, 0, 0, -131069, 0, 0, -131068, 0, 0, -131067, 0, 0, -131066, 0, 0, -131065, 0, 0, -131064, 0, 0, -131063, 0, 0, -131062, 0, 0, -131061, 0, 0, -131060, 0, 0, -131059, 0, 0, -131058, 0, 0, -131057, 0, 0, -131056, 0, 0, -131055, 0, 0, -131054, 0, 0, -20, 0, 0, -19, 0, 0, -18, 0, 0, -17, 0, 0, -16, 0, 0, -15, 0, 0, -14, 0, 0, -13, 0, 0, -12, 0, 0, -11, 0, 0, -10, 0, 0, -9, 0, 0, -8, 0, 0, -7, 0, 0, -6, 0, 0, -5, 0, 0, -4, 0, 0, -3, 0, 0, -2, 0, 0, -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, -65520, 0, 0, -65519, 0, 0, -65518, 0, 0 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 1717, 467 )
collision_mask = 30

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
limit_left = 75
limit_bottom = 700
limit_smoothed = true
drag_margin_h_enabled = true
drag_margin_v_enabled = true
drag_margin_left = 0.3
drag_margin_right = 0.3
editor_draw_limits = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="PurpleSky" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 1280, 960 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/PurpleSky"]
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
centered = false

[node name="BackBlocks" type="ParallaxLayer" parent="ParallaxBackground"]
modulate = Color( 0.184314, 0.0823529, 0.243137, 0.439216 )
position = Vector2( 0, -1000 )
motion_scale = Vector2( 0.2, 0.2 )
motion_mirroring = Vector2( 2560, 1920 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/BackBlocks"]
scale = Vector2( 4, 4 )
texture = ExtResource( 5 )
centered = false

[node name="MiddleBlocks" type="ParallaxLayer" parent="ParallaxBackground"]
modulate = Color( 0.866667, 0.8, 0.905882, 0.788235 )
motion_scale = Vector2( 0.4, 0.4 )
motion_offset = Vector2( 0, -500 )
motion_mirroring = Vector2( 1600, 1200 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/MiddleBlocks"]
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 5 )
centered = false

[node name="NearbyBlocks" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0.7, 0.7 )
motion_mirroring = Vector2( 1120, 840 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/NearbyBlocks"]
scale = Vector2( 1.75, 1.75 )
texture = ExtResource( 5 )
centered = false

[node name="FallZone" type="Area2D" parent="."]
position = Vector2( 79, 1045 )
collision_layer = 4
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="FallZone"]
position = Vector2( 1533.5, 56.5 )
shape = SubResource( 3 )

[node name="Coin1" parent="." instance=ExtResource( 6 )]
position = Vector2( 1159, 508 )

[node name="Coin2" parent="." instance=ExtResource( 6 )]
position = Vector2( 2377, 328 )

[node name="Coin3" parent="." instance=ExtResource( 6 )]
position = Vector2( 1565, 326 )

[node name="flou" type="Sprite" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0.541176 )
position = Vector2( 1529, 420 )
scale = Vector2( 96.5625, 27.25 )
texture = ExtResource( 8 )

[connection signal="body_entered" from="FallZone" to="Player" method="_on_FallZone_body_entered"]
